<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgColor2"
    android:gravity="center">

    <TextView
        android:id="@+id/txtRegConfLine1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reg_confirmation_line1"
        android:textColor="@color/textColor"
        android:textSize="@dimen/font_small"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/txtRegConfLine2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reg_confirmation_line2"
        android:textColor="@color/textColor"
        android:textSize="@dimen/font_small"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="@dimen/spacing_normal"
        android:gravity="center"/>

    <TextView
        android:id="@+id/txtRegConfLine3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reg_confirmation_line3"
        android:textColor="@color/textColor"
        android:textSize="@dimen/font_small"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="@dimen/spacing_normal"
        android:gravity="center"/>

    <TextView
        android:id="@+id/txtRegConfLine4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reg_confirmation_line4"
        android:textColor="@color/textColor"
        android:textSize="@dimen/font_small"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="@dimen/spacing_normal"
        android:gravity="center"/>

    <Button
        android:id="@+id/btnRegConf"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height_normallarge"
        android:text="OK"
        android:background="@drawable/button_rounded"
        android:textSize="@dimen/font_normal"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginTop="70dp"
        android:textColor="@color/textColor"
        android:drawableRight="@drawable/icon_button_white"/>

</LinearLayout>